--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongodb": "^4.9.1"
+    "mongodb": "^4.9.1",
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.25.1",
