--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,10 @@ jobs:
           MONGO_INITDB_ROOT_PASSWORD: example
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      MONGODB_CLUSTER_ADDRESS: mongodb
+      MONGODB_CLUSTER_ADDRESS: mongodb:27017
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
+      MONGODB_DB_NAME: gha-demo
       PORT: 8080
     steps:
       - name: Get Code
