--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:$PORT # requires MongoDB Atlas to accept requests from anywhere!
+        run: |
+          npm start & 
+          npx wait-on http://127.0.0.1:$PORT --timeout 10000
       - name: Run tests
         run: npm test
       - name: Output information
